Previous button z-index fixed

--- a/Subcategory - Landing Page/μυθολογια/css/magneticButton.css
+++ b/Subcategory - Landing Page/μυθολογια/css/magneticButton.css
@@ -21,7 +21,7 @@ body {
 
 
 .content-button {
-	z-index: 99;
+	z-index: 1;
 	grid-area: content;
 	display: flex;
 	flex-direction: column;
